# The-Grump-App

./: .gitignore  HANDOFF.md  README.md  docker-compose.prod.yml  docker-compose.yml  railway.json
.github/workflows/: ci.yml  deploy-web.yml
backend/: .env.example  Dockerfile  alembic.ini  fly.toml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: auth.py  celery_app.py  config.py  database.py  db_sync.py  main.py  permissions.py  schemas.py  validation.py
backend/app/middleware/: security_headers.py
backend/app/models/: __init__.py  scrape.py  user.py  venue.py
backend/app/routers/: auth_routes.py  cities.py  search.py  uploads.py  users.py  venues.py
backend/app/scrapers/: __init__.py  ai_summary.py  base.py  beli.py  conde_nast.py  dedup.py  eater.py  google_reviews.py  infatuation.py  michelin.py  michelin_hotels.py  reddit.py  reservations.py  scoring.py
backend/app/services/: photos.py  secrets.py
backend/scripts/: deploy.sh  migrate.py  run_scrapers.sh
backend/tests/: conftest.py  test_api_auth.py  test_api_venues.py  test_auth_tokens.py  test_scoring.py  test_validation.py
mobile/: .eslintrc.js  app.json  package-lock.json  package.json
mobile/app/: _layout.tsx  index.tsx
mobile/app/(tabs)/: _layout.tsx  explore.tsx  profile.tsx  rankings.tsx  search.tsx
mobile/app/venue/: [id].tsx
mobile/components/: EntityToggle.tsx  ErrorState.tsx  LoadingState.tsx  ScoreBadge.tsx  SkeletonCard.tsx  SourceCard.tsx  VenueCard.tsx  VerdictButtons.tsx
mobile/design/: build-prototype.mjs  foodgrump-prototype.html  foodgrump-prototype.template.html
mobile/lib/: api.ts  auth.ts  config.ts  dataSource.ts  hooks.ts  localData.ts  localStore.ts  mockData.ts  seed.json  storage.ts  types.ts
mobile/scripts/: generate-seed.mjs
mobile/scripts/seed-sources/: 01-us-west-east.json  02-us-central.json  03-london-istanbul.json  04-asia-pacific.json
scripts/: security-check.sh
