[project]
name = "foodgrump-backend"
version = "0.1.0"
description = "FoodGrump — Restaurant & Hotel Recommendation Aggregator API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "geoalchemy2>=0.15",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "boto3>=1.34",
    "openai>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.backends._legacy:_Backend"
